--- a/yatube/templates/posts/group_list.html
+++ b/yatube/templates/posts/group_list.html
@@ -3,4 +3,5 @@
       <!-- класс py-5 создает отступы сверху и снизу блока -->
       <div class="container py-5">
       </div>
+      <title>Записи сообщества Лев Толстой – зеркало русской революции.</title>
     {% endblock %}
