--- a/yatube/templates/posts/index.html
+++ b/yatube/templates/posts/index.html
@@ -1,13 +1,20 @@
 {% extends 'base.html' %}
+    <title>Последние обновления на сайте</title>
     {% block content %}
       <!-- класс py-5 создает отступы сверху и снизу блока -->
       <div class="container py-5">
-      <a class="navbar-brand" href="{% url 'posts:group_list' %}">
-      Гланге
-      </a>
       </div>
+{% for post in posts %}
+  <ul>
+    <li>
+      Автор: {{ post.author.get_full_name }}
+    </li>
+    <li>
+      Дата публикации: {{ post.pub_date|date:"d E Y" }}
+    </li>
+  </ul>
+  <p>{{ post.text }}</p>
+  <a href="">все записи группы</a>
+  {% if not forloop.last %}<hr>{% endif %}
+{% endfor %}
     {% endblock %}
-    <!-- Использованы классы бустрапа: -->
-    <!-- border-top: создаёт тонкую линию сверху блока -->
-    <!-- text-center: выравнивает текстовые блоки внутри блока по центру -->
-    <!-- py-3: контент внутри размещается с отступом сверху и снизу -->
