--- a/yatube/templates/base.html
+++ b/yatube/templates/base.html
@@ -7,7 +7,9 @@
       </header>
     <content>
       {% block content %}
-        Контент не подвезли :(
+        {% if post.group %}
+  <a href="{% url 'posts:group_list' post.group.slug %}">все записи группы</a>
+{% endif %}
       {% endblock %}
     </content>
 
