--- a/yatube/templates/posts/group_list.html
+++ b/yatube/templates/posts/group_list.html
@@ -1,7 +1,9 @@
 {% extends 'base.html' %}
-    {% block content %}
-      <!-- класс py-5 создает отступы сверху и снизу блока -->
-      <div class="container py-5">
-      </div>
-      <title>Записи сообщества Лев Толстой – зеркало русской революции.</title>
-    {% endblock %}
+
+{% block content %}
+  <!-- класс py-5 создает отступы сверху и снизу блока -->
+  <div class="container py-5"></div>
+{% if post.group %}
+  <a href="{% url 'posts:group_list' post.group.slug %}">все записи группы</a>
+{% endif %}
+{% endblock %}
